--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,34 +3,52 @@
           <img class="mockup__img" src="images/mockup.jpg" />
           <div id="mobile" class="mobile">
             <ul id="slideshow" class="slideshow">
-              <li class="slideshow__item"><img src="images/small/1.png" /></li>
+              <li class="slideshow__item"><img src="images/small/volo1.png" /></li>
               <li class="slideshow__item"><img src="images/small/2.png" /></li>
               <li class="slideshow__item"><img src="images/small/3.png" /></li>
               <li class="slideshow__item"><img src="images/small/4.png" /></li>
             </ul>
           </div>
           <header class="codrops-header">
-            <h1><span>Volontario</span><i>Entä jos auttaminen olisikin helppoa?</i></h1>
+            <h1><span>Volontario</span><i>Entä jos auttaminen olisikin helppoa?</i><br>
+            <i>Niinhän se onkin, tai niin me ainakin uskomme. Kuka tahansa osaa auttaa ja voi auttaa, usein vaikeinta on löytää se henkilö, tapahtuma tai kohde, joka tarvitsee apua eniten.</i><br>
+            <i>Tähän ME pyrimme olemaan ratkaisu.</i></h1>
           </header>
         </div>
       </div>
-      <div class="content">
+
+      <div class="content panel">
            <div class="row">
            <br>
 
-                <div class="col s4">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras facilisis orci accumsan purus pulvinar, non dapibus magna congue. Maecenas elit felis, rhoncus convallis lorem nec, pretium viverra velit. Donec mattis egestas ex. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur vulputate erat in quam dignissim ultricies. Phasellus et enim vulputate, aliquam nibh eu, lobortis leo. Suspendisse at velit ac nisl rhoncus scelerisque. Cras consectetur fermentum felis, quis aliquam neque ornare in.
-                  <!-- Promo Content 1 goes here -->
+                 <div class="col s12 m6">
+                  <div class="card darken-1">
+                    <div class="card-content">
+                      <span class="card-title">Auttajalle</span>
+                      <p>            
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras facilisis orci accumsan purus pulvinar, non dapibus magna congue. Maecenas elit felis, rhoncus convallis lorem nec, pretium viverra velit. Donec mattis egestas ex. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur vulputate erat in quam dignissim ultricies. Phasellus et enim vulputate, aliquam nibh eu, lobortis leo. Suspendisse at velit ac nisl rhoncus scelerisque. Cras consectetur fermentum felis, quis aliquam neque ornare in.</p>
+                    </div>
+                    <div class="card-action">
+                      <a href="#">This is a link</a>
+                      <a href="#">This is a link</a>
+                    </div>
+                  </div>
                 </div>
-                <div class="col s4">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras facilisis orci accumsan purus pulvinar, non dapibus magna congue. Maecenas elit felis, rhoncus convallis lorem nec, pretium viverra velit. Donec mattis egestas ex. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur vulputate erat in quam dignissim ultricies. Phasellus et enim vulputate, aliquam nibh eu, lobortis leo. Suspendisse at velit ac nisl rhoncus scelerisque. Cras consectetur fermentum felis, quis aliquam neque ornare in. 
-                  <!-- Promo Content 2 goes here -->
+
+                <div class="col s12 m6">
+                  <div class="card pink darken-1">
+                    <div class="card-content white-text">
+                      <span class="card-title">Avun tarvitsijalle</span>
+                      <p>            
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras facilisis orci accumsan purus pulvinar, non dapibus magna congue. Maecenas elit felis, rhoncus convallis lorem nec, pretium viverra velit. Donec mattis egestas ex. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur vulputate erat in quam dignissim ultricies. Phasellus et enim vulputate, aliquam nibh eu, lobortis leo. Suspendisse at velit ac nisl rhoncus scelerisque. Cras consectetur fermentum felis, quis aliquam neque ornare in.</p>
+                    </div>
+                    <div class="card-action">
+                      <a href="#">This is a link</a>
+                      <a href="#">This is a link</a>
+                    </div>
+                  </div>
                 </div>
-                <div class="col s4">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras facilisis orci accumsan purus pulvinar, non dapibus magna congue. Maecenas elit felis, rhoncus convallis lorem nec, pretium viverra velit. Donec mattis egestas ex. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur vulputate erat in quam dignissim ultricies. Phasellus et enim vulputate, aliquam nibh eu, lobortis leo. Suspendisse at velit ac nisl rhoncus scelerisque. Cras consectetur fermentum felis, quis aliquam neque ornare in.
-                  <!-- Promo Content 3 goes here -->
-                </div>
-                <!-- Promo Content 1 goes here -->
+
               </div>
             </div>
           
@@ -40,7 +58,7 @@
             <figcaption>
               <div>
                 <h2>Haluatko <span>auttaa?</span></h2>
-                <p>Lily likes to play with crayons and pencils</p>
+                <p>Lataa sovellus iPhonelle tai Androidillesi, rekisteröidy ja ilmoita auttava kätesi.</p>
               </div>
               <a href="#">View more</a>
             </figcaption>     
@@ -50,7 +68,7 @@
             <figcaption>
               <div>
                 <h2>Tarvitsetko <span>auttajaa?</span></h2>
-                <p>Lily likes to play with crayons and pencils</p>
+                <p>Rekisteröidy järjestelmäämme ja voit alkaa luomaan tapahtumia ja saamaan auttajia tarpeesesi.</p>
               </div>
               <a href="#">View more</a>
             </figcaption>     
@@ -61,8 +79,8 @@
             <img src="images/33.jpg" alt="img12"/>
             <figcaption>
               <div>
-                <h2>Haluatko <span>auttaa?</span></h2>
-                <p>Lily likes to play with crayons and pencils</p>
+                <h2>Oletko <span>järjestö?</span></h2>
+                <p>Ota meihin yhteyttä, teemme mielellämme yhteityötä ja jos sinulla on vaikka valmis rajapinta integroimme sen mielellämme Volontarioon.</p>
               </div>
               <a href="#">View more</a>
             </figcaption>     
@@ -71,8 +89,8 @@
             <img src="images/16.jpg" alt="img12"/>
             <figcaption>
               <div>
-                <h2>Tarvitsetko <span>auttajaa?</span></h2>
-                <p>Lily likes to play with crayons and pencils</p>
+                <h2>Oletko <span>yritys?</span></h2>
+                <p>Sponsorointi on aina mieluisaa, mutta ottakaa vapaasti yhteyttä, niin kehitetään kokonaisuutta kaikille.</p>
               </div>
               <a href="#">View more</a>
             </figcaption>     
