--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,6 +2,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 
 // bower:scss
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
+@import "Materialize/sass/materialize.scss";
 // endbower
 
 .browsehappy {
@@ -1274,3 +1275,4 @@ figure.effect-chico:hover p {
     width: 100%;
   }
 }
+
