--- a/app/views/main.html
+++ b/app/views/main.html
@@ -19,8 +19,20 @@
 
       <div class="content panel">
            <div class="row">
-           <br>
 
+            <div class="col s12 m12">
+                  <div class="card darken-1">
+                    <div class="card-content">
+                      <span class="card-title">Mitä pyrimme?</span>
+                      <p>            
+                        Entä jos löytäisitkin aina tavan vaikuttaa, auttaa, tehdä hyväntekeväisyyttä. Tavan kohdistaa apusi, materiasi, aikasi jollekulle joka sitä tarvitsee. Entä askel tästä pidemmälle, jos tietäisitkin missä apu on akuutisti tarpeen ja missä vapaaehtoisia jo on. Tästäkin askel eteenpäin? Entä jos voisit viestiä apua tarvitsevan tahon kanssa, kuun viimeisen sunnuntain iltapäivän olevan sinulle jo vapaa? </p>
+                    </div>
+                    <div class="card-action">
+                      <a href="#">This is a link</a>
+                      <a href="#">This is a link</a>
+                    </div>
+                  </div>
+                </div>
                  <div class="col s12 m6">
                   <div class="card darken-1">
                     <div class="card-content">
