--- a/app/views/main.html
+++ b/app/views/main.html
@@ -11,7 +11,7 @@
           </div>
           <header class="codrops-header">
             <h1><span>Volontario</span><i>Entä jos auttaminen olisikin helppoa?</i><br>
-            <i>Niinhän se onkin, tai niin me ainakin uskomme. Kuka tahansa osaa auttaa ja voi auttaa, usein vaikeinta on löytää se henkilö, tapahtuma tai kohde, joka tarvitsee apua eniten.</i><br>
+            <i>Niinhän se onkin, tai niin me ainakin uskomme. Kuka tahansa osaa auttaa ja voi auttaa. Usein vaikeinta onkin löytää se henkilö, tapahtuma tai kohde, joka tarvitsee apua eniten.</i><br>
             <i>Tähän ME pyrimme olemaan ratkaisu.</i></h1>
           </header>
         </div>
@@ -23,9 +23,10 @@
             <div class="col s12 m12">
                   <div class="card darken-1">
                     <div class="card-content">
-                      <span class="card-title">Mitä pyrimme?</span>
-                      <p>            
-                        Entä jos löytäisitkin aina tavan vaikuttaa, auttaa, tehdä hyväntekeväisyyttä. Tavan kohdistaa apusi, materiasi, aikasi jollekulle joka sitä tarvitsee. Entä askel tästä pidemmälle, jos tietäisitkin missä apu on akuutisti tarpeen ja missä vapaaehtoisia jo on. Tästäkin askel eteenpäin? Entä jos voisit viestiä apua tarvitsevan tahon kanssa, kuun viimeisen sunnuntain iltapäivän olevan sinulle jo vapaa? </p>
+                      <span class="card-title">Mihin pyrimme?</span>
+                      <p>Vapaaehtoisia kaipaavia tilaisuuksia ja tapahtumia riittää, mutta niiden tiedotus ja aikataulut kulkevat vielä pitkälti ilmoitustauluilla ja puskaradiossa. Osallistuminen voi olla vaikeaa, jos et jo tiedä, kenen puoleen kääntyä.</p>
+                      <p>Entä jos löytäisit helpon tavan vaikuttaa, auttaa, ja tehdä hyvää. Voisit tarjota taitojasi ja aikaasi jollekulle, joka on niitä vailla.</p>
+                      <p>Tarjoamme palvelun, jolla näet, missä apua tarvitaan. Näet, minkälaisia tehtäviä on tarjolla, ja voit vain ruksata aikasi kalenteriin.</p>
                     </div>
                     <div class="card-action">
                       <a href="#">This is a link</a>
@@ -50,7 +51,7 @@
                 <div class="col s12 m6">
                   <div class="card pink darken-1">
                     <div class="card-content white-text">
-                      <span class="card-title">Avun tarvitsijalle</span>
+                      <span class="card-title">Apua tarvitsevalle</span>
                       <p>            
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras facilisis orci accumsan purus pulvinar, non dapibus magna congue. Maecenas elit felis, rhoncus convallis lorem nec, pretium viverra velit. Donec mattis egestas ex. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur vulputate erat in quam dignissim ultricies. Phasellus et enim vulputate, aliquam nibh eu, lobortis leo. Suspendisse at velit ac nisl rhoncus scelerisque. Cras consectetur fermentum felis, quis aliquam neque ornare in.</p>
                     </div>
@@ -72,7 +73,7 @@
                 <h2>Haluatko <span>auttaa?</span></h2>
                 <p>Lataa sovellus iPhonelle tai Androidillesi, rekisteröidy ja ilmoita auttava kätesi.</p>
               </div>
-              <a href="#">View more</a>
+              <a href="#">Lue lisää</a>
             </figcaption>     
           </figure>
           <figure class="effect-milo">
@@ -80,9 +81,9 @@
             <figcaption>
               <div>
                 <h2>Tarvitsetko <span>auttajaa?</span></h2>
-                <p>Rekisteröidy järjestelmäämme ja voit alkaa luomaan tapahtumia ja saamaan auttajia tarpeesesi.</p>
+                <p>Rekisteröidy järjestelmäämme, jotta voit ilmoittaa tapahtumista ja saada auttajia tarpeellesi.</p>
               </div>
-              <a href="#">View more</a>
+              <a href="#">Lue lisää</a>
             </figcaption>     
           </figure>
         </div>
@@ -91,20 +92,20 @@
             <img src="images/33.jpg" alt="img12"/>
             <figcaption>
               <div>
-                <h2>Oletko <span>järjestö?</span></h2>
-                <p>Ota meihin yhteyttä, teemme mielellämme yhteityötä ja jos sinulla on vaikka valmis rajapinta integroimme sen mielellämme Volontarioon.</p>
+                <h2>Toimitko <span>järjestössä?</span></h2>
+                <p>Ota yhteyttä! Teemme yhteistyötä monin tavoin: järjestelmämme osaa hyödyntää ulkoisia rajapintoja tapahtumien ja sijaintien automaattiseen integrointiin.</p>
               </div>
-              <a href="#">View more</a>
+              <a href="#">Lue lisää</a>
             </figcaption>     
           </figure>
           <figure class="effect-milo">
             <img src="images/16.jpg" alt="img12"/>
             <figcaption>
               <div>
-                <h2>Oletko <span>yritys?</span></h2>
+                <h2>Toimitko <span>yrityksessä?</span></h2>
                 <p>Sponsorointi on aina mieluisaa, mutta ottakaa vapaasti yhteyttä, niin kehitetään kokonaisuutta kaikille.</p>
               </div>
-              <a href="#">View more</a>
+              <a href="#">Lue lisää</a>
             </figcaption>     
           </figure>
         </div>
