--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,151 +1,168 @@
 <div id="wrap" class="wrap">
-        <div class="mockup">
-          <img class="mockup__img" src="images/mockup.jpg" />
-          <div id="mobile" class="mobile">
-            <ul id="slideshow" class="slideshow">
-              <li class="slideshow__item"><img src="images/small/volo1.png" /></li>
-              <li class="slideshow__item"><img src="images/small/2.png" /></li>
-              <li class="slideshow__item"><img src="images/small/3.png" /></li>
-              <li class="slideshow__item"><img src="images/small/4.png" /></li>
-            </ul>
-          </div>
-          <header class="codrops-header">
-            <h1><span>Volontario</span><i>Entä jos auttaminen olisikin helppoa?</i><br>
-            <i>Niinhän se onkin, tai niin me ainakin uskomme. Kuka tahansa osaa auttaa ja voi auttaa. Usein vaikeinta onkin löytää se henkilö, tapahtuma tai kohde, joka tarvitsee apua eniten.</i><br>
-            <i>Tähän ME pyrimme olemaan ratkaisu.</i></h1>
-          </header>
+  <div class="mockup">
+    <img class="mockup__img" src="images/mockup.jpg">
+
+    <div id="mobile" class="mobile">
+      <ul id="slideshow" class="slideshow">
+        <li class="slideshow__item"><img src="images/small/volo1.png"></li>
+        <li class="slideshow__item"><img src="images/small/2.png"></li>
+        <li class="slideshow__item"><img src="images/small/3.png"></li>
+        <li class="slideshow__item"><img src="images/small/4.png"></li>
+      </ul>
+    </div>
+
+    <header class="codrops-header">
+      <h1>
+        <span>Volontario</span><i>Entä jos auttaminen olisikin helppoa?</i><br>
+        <i>Niinhän se onkin, tai niin me ainakin uskomme. Kuka tahansa osaa auttaa ja voi auttaa. Usein vaikeinta onkin löytää se henkilö, tapahtuma tai kohde, joka tarvitsee apua eniten.</i><br>
+        <i>Tähän ME pyrimme olemaan ratkaisu.</i>
+      </h1>
+    </header>
+  </div>
+</div>
+
+<div class="content panel">
+  <div class="row">
+    <div class="col s12 m12">
+      <div class="card darken-1">
+        <div class="card-content">
+          <span class="card-title">Mihin pyrimme?</span>
+          <p>Vapaaehtoisia kaipaavia tilaisuuksia ja tapahtumia riittää, mutta niiden tiedotus ja aikataulut kulkevat vielä pitkälti ilmoitustauluilla ja puskaradiossa. Osallistuminen voi olla vaikeaa, jos et jo tiedä, kenen puoleen kääntyä.</p>
+          <p>Entä jos löytäisit helpon tavan vaikuttaa, auttaa, ja tehdä hyvää. Voisit tarjota taitojasi ja aikaasi jollekulle, joka on niitä vailla.</p>
+          <p>Tarjoamme palvelun, jolla näet, missä apua tarvitaan. Näet, minkälaisia tehtäviä on tarjolla, ja voit vain ruksata aikasi kalenteriin.</p>
+        </div>
+
+        <div class="card-action">
+          <a href="#">This is a link</a>
+          <a href="#">This is a link</a>
         </div>
       </div>
-
-      <div class="content panel">
-           <div class="row">
-
-            <div class="col s12 m12">
-                  <div class="card darken-1">
-                    <div class="card-content">
-                      <span class="card-title">Mihin pyrimme?</span>
-                      <p>Vapaaehtoisia kaipaavia tilaisuuksia ja tapahtumia riittää, mutta niiden tiedotus ja aikataulut kulkevat vielä pitkälti ilmoitustauluilla ja puskaradiossa. Osallistuminen voi olla vaikeaa, jos et jo tiedä, kenen puoleen kääntyä.</p>
-                      <p>Entä jos löytäisit helpon tavan vaikuttaa, auttaa, ja tehdä hyvää. Voisit tarjota taitojasi ja aikaasi jollekulle, joka on niitä vailla.</p>
-                      <p>Tarjoamme palvelun, jolla näet, missä apua tarvitaan. Näet, minkälaisia tehtäviä on tarjolla, ja voit vain ruksata aikasi kalenteriin.</p>
-                    </div>
-                    <div class="card-action">
-                      <a href="#">This is a link</a>
-                      <a href="#">This is a link</a>
-                    </div>
-                  </div>
-                </div>
-                 <div class="col s12 m6">
-                  <div class="card darken-1">
-                    <div class="card-content">
-                      <span class="card-title">Auttajalle</span>
-                      <p>            
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras facilisis orci accumsan purus pulvinar, non dapibus magna congue. Maecenas elit felis, rhoncus convallis lorem nec, pretium viverra velit. Donec mattis egestas ex. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur vulputate erat in quam dignissim ultricies. Phasellus et enim vulputate, aliquam nibh eu, lobortis leo. Suspendisse at velit ac nisl rhoncus scelerisque. Cras consectetur fermentum felis, quis aliquam neque ornare in.</p>
-                    </div>
-                    <div class="card-action">
-                      <a href="#">This is a link</a>
-                      <a href="#">This is a link</a>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col s12 m6">
-                  <div class="card pink darken-1">
-                    <div class="card-content white-text">
-                      <span class="card-title">Apua tarvitsevalle</span>
-                      <p>            
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras facilisis orci accumsan purus pulvinar, non dapibus magna congue. Maecenas elit felis, rhoncus convallis lorem nec, pretium viverra velit. Donec mattis egestas ex. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur vulputate erat in quam dignissim ultricies. Phasellus et enim vulputate, aliquam nibh eu, lobortis leo. Suspendisse at velit ac nisl rhoncus scelerisque. Cras consectetur fermentum felis, quis aliquam neque ornare in.</p>
-                    </div>
-                    <div class="card-action">
-                      <a href="#">This is a link</a>
-                      <a href="#">This is a link</a>
-                    </div>
-                  </div>
-                </div>
-
-              </div>
-            </div>
-          
-        <div class="grid">
-          <figure class="effect-milo">
-            <img src="images/33.jpg" alt="img12"/>
-            <figcaption>
-              <div>
-                <h2>Haluatko <span>auttaa?</span></h2>
-                <p>Lataa sovellus iPhonelle tai Androidillesi, rekisteröidy ja ilmoita auttava kätesi.</p>
-              </div>
-              <a href="#">Lue lisää</a>
-            </figcaption>     
-          </figure>
-          <figure class="effect-milo">
-            <img src="images/16.jpg" alt="img12"/>
-            <figcaption>
-              <div>
-                <h2>Tarvitsetko <span>auttajaa?</span></h2>
-                <p>Rekisteröidy järjestelmäämme, jotta voit ilmoittaa tapahtumista ja saada auttajia tarpeellesi.</p>
-              </div>
-              <a href="#">Lue lisää</a>
-            </figcaption>     
-          </figure>
-        </div>
-        <div class="grid">
-          <figure class="effect-milo">
-            <img src="images/33.jpg" alt="img12"/>
-            <figcaption>
-              <div>
-                <h2>Toimitko <span>järjestössä?</span></h2>
-                <p>Ota yhteyttä! Teemme yhteistyötä monin tavoin: järjestelmämme osaa hyödyntää ulkoisia rajapintoja tapahtumien ja sijaintien automaattiseen integrointiin.</p>
-              </div>
-              <a href="#">Lue lisää</a>
-            </figcaption>     
-          </figure>
-          <figure class="effect-milo">
-            <img src="images/16.jpg" alt="img12"/>
-            <figcaption>
-              <div>
-                <h2>Toimitko <span>yrityksessä?</span></h2>
-                <p>Sponsorointi on aina mieluisaa, mutta ottakaa vapaasti yhteyttä, niin kehitetään kokonaisuutta kaikille.</p>
-              </div>
-              <a href="#">Lue lisää</a>
-            </figcaption>     
-          </figure>
-        </div>
     </div>
-    <!-- /container -->
 
-    <script>
-      (function() {
-        new Slideshow( document.getElementById( 'slideshow' ) );
+    <div class="col s12 m6">
+      <div class="card darken-1">
+        <div class="card-content">
+          <span class="card-title">Auttajalle</span>
+          <p>            
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras facilisis orci accumsan purus pulvinar, non dapibus magna congue. Maecenas elit felis, rhoncus convallis lorem nec, pretium viverra velit. Donec mattis egestas ex. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur vulputate erat in quam dignissim ultricies. Phasellus et enim vulputate, aliquam nibh eu, lobortis leo. Suspendisse at velit ac nisl rhoncus scelerisque. Cras consectetur fermentum felis, quis aliquam neque ornare in.
+          </p>
+        </div>
 
-        /* Mockup responsiveness */
-        var body = docElem = window.document.documentElement,
-          wrap = document.getElementById( 'wrap' ),
-          mockup = wrap.querySelector( '.mockup' ),
-          mockupWidth = mockup.offsetWidth;
+        <div class="card-action">
+          <a href="#">This is a link</a>
+          <a href="#">This is a link</a>
+        </div>
+      </div>
+    </div>
 
-        scaleMockup();
+    <div class="col s12 m6">
+      <div class="card pink darken-1">
+        <div class="card-content white-text">
+          <span class="card-title">Apua tarvitsevalle</span>
+          <p>            
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras facilisis orci accumsan purus pulvinar, non dapibus magna congue. Maecenas elit felis, rhoncus convallis lorem nec, pretium viverra velit. Donec mattis egestas ex. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur vulputate erat in quam dignissim ultricies. Phasellus et enim vulputate, aliquam nibh eu, lobortis leo. Suspendisse at velit ac nisl rhoncus scelerisque. Cras consectetur fermentum felis, quis aliquam neque ornare in.
+          </p>
+        </div>
 
-        function scaleMockup() {
-          var wrapWidth = wrap.offsetWidth,
-            val = wrapWidth / mockupWidth;
+        <div class="card-action">
+          <a href="#">This is a link</a>
+          <a href="#">This is a link</a>
+        </div>
+      </div>
+    </div>
+  </div>
+      
+  <div class="grid">
+    <figure class="effect-milo">
+      <img src="images/33.jpg" alt="img12">
 
-          mockup.style.transform = 'scale3d(' + val + ', ' + val + ', 1)';
-        }
-        
-        window.addEventListener( 'resize', resizeHandler );
+      <figcaption>
+        <div>
+          <h2>Haluatko <span>auttaa?</span></h2>
+          <p>Lataa sovellus iPhonelle tai Androidillesi, rekisteröidy ja ilmoita auttava kätesi.</p>
+        </div>
 
-        function resizeHandler() {
-          function delayed() {
-            resize();
-            resizeTimeout = null;
-          }
-          if ( typeof resizeTimeout != 'undefined' ) {
-            clearTimeout( resizeTimeout );
-          }
-          resizeTimeout = setTimeout( delayed, 50 );
-        }
+        <a href="#">Lue lisää</a>
+      </figcaption>     
+    </figure>
 
-        function resize() {
-          scaleMockup();
-        }
-      })();
-    </script>
+    <figure class="effect-milo">
+      <img src="images/16.jpg" alt="img12">
+
+      <figcaption>
+        <div>
+          <h2>Tarvitsetko <span>auttajaa?</span></h2>
+          <p>Rekisteröidy järjestelmäämme, jotta voit ilmoittaa tapahtumista ja saada auttajia tarpeellesi.</p>
+        </div>
+
+        <a href="#">Lue lisää</a>
+      </figcaption>     
+    </figure>
+  </div>
+
+  <div class="grid">
+    <figure class="effect-milo">
+      <img src="images/33.jpg" alt="img12">
+
+      <figcaption>
+        <div>
+          <h2>Toimitko <span>järjestössä?</span></h2>
+          <p>Ota yhteyttä! Teemme yhteistyötä monin tavoin: järjestelmämme osaa hyödyntää ulkoisia rajapintoja tapahtumien ja sijaintien automaattiseen integrointiin.</p>
+        </div>
+
+        <a href="#">Lue lisää</a>
+      </figcaption>     
+    </figure>
+
+    <figure class="effect-milo">
+      <img src="images/16.jpg" alt="img12">
+
+      <figcaption>
+        <div>
+          <h2>Toimitko <span>yrityksessä?</span></h2>
+          <p>Sponsorointi on aina mieluisaa, mutta ottakaa vapaasti yhteyttä, niin kehitetään kokonaisuutta kaikille.</p>
+        </div>
+
+        <a href="#">Lue lisää</a>
+      </figcaption>     
+    </figure>
+  </div>
+</div>
+
+<script>
+  (function() {
+    new Slideshow( document.getElementById( 'slideshow' ) );
+
+    /* Mockup responsiveness */
+    var body = docElem = window.document.documentElement,
+      wrap = document.getElementById( 'wrap' ),
+      mockup = wrap.querySelector( '.mockup' ),
+      mockupWidth = mockup.offsetWidth;
+
+    scaleMockup();
+
+    function scaleMockup() {
+      var wrapWidth = wrap.offsetWidth,
+        val = wrapWidth / mockupWidth;
+
+      mockup.style.transform = 'scale3d(' + val + ', ' + val + ', 1)';
+    }
+    
+    window.addEventListener( 'resize', resizeHandler );
+
+    function resizeHandler() {
+      function delayed() {
+        resize();
+        resizeTimeout = null;
+      }
+      if ( typeof resizeTimeout != 'undefined' ) {
+        clearTimeout( resizeTimeout );
+      }
+      resizeTimeout = setTimeout( delayed, 50 );
+    }
+
+    function resize() {
+      scaleMockup();
+    }
+  })();
+</script>
