--- a/app/views/main.html
+++ b/app/views/main.html
@@ -27,9 +27,9 @@
       <div class="card darken-1">
         <div class="card-content">
           <span class="card-title">Mihin pyrimme?</span>
-          <p>Vapaaehtoisia kaipaavia tilaisuuksia ja tapahtumia riittää, mutta niiden tiedotus ja aikataulut kulkevat vielä pitkälti ilmoitustauluilla ja puskaradiossa. Osallistuminen voi olla vaikeaa, jos et jo tiedä, kenen puoleen kääntyä.</p>
-          <p>Entä jos löytäisit helpon tavan vaikuttaa, auttaa, ja tehdä hyvää. Voisit tarjota taitojasi ja aikaasi jollekulle, joka on niitä vailla.</p>
-          <p>Tarjoamme palvelun, jolla näet, missä apua tarvitaan. Näet, minkälaisia tehtäviä on tarjolla, ja voit vain ruksata aikasi kalenteriin.</p>
+          <p>Vapaaehtoisia kaipaavia tilaisuuksia ja tapahtumia riittää, mutta niiden tiedotus ja aikataulut kulkevat vielä pitkälti ilmoitustauluilla ja puskaradiossa. Osallistuminen voi olla vaikeaa, jos ei tiedä, kenen puoleen kääntyä.</p>
+          <p>Entä jos löytäisit helpon tavan vaikuttaa, auttaa ja tehdä hyvää. Voisit tarjota taitojasi ja aikaasi jollekulle, joka on niitä vailla.</p>
+          <p>Sovelluksellamme näet, missä apua tarvitaan ja minkälaisia tehtäviä on tarjolla. Voit vain ruksata aikasi kalenteriin.</p>
         </div>
 
         <div class="card-action">
@@ -107,7 +107,7 @@
       <figcaption>
         <div>
           <h2>Toimitko <span>järjestössä?</span></h2>
-          <p>Ota yhteyttä! Teemme yhteistyötä monin tavoin: järjestelmämme osaa hyödyntää ulkoisia rajapintoja tapahtumien ja sijaintien automaattiseen integrointiin.</p>
+          <p>Ota yhteyttä! Teemme yhteistyötä monin tavoin: järjestelmämme osaa muun muassa hyödyntää ulkoisia rajapintoja tapahtumien ja sijaintien automaattiseen integrointiin.</p>
         </div>
 
         <a href="#">Lue lisää</a>
